Format date in CMS

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -19,6 +19,11 @@ collections:
         }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
-      - { label: "Publish Date", name: "publishDate", widget: "datetime" }
+      - {
+          label: "Publish Date",
+          name: "publishDate",
+          widget: "date",
+          format: "dddd, MMMM DD YYYY",
+        }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
