Add redirect rules

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,15 @@
   command = "npm run build"
   publish = "dist"
 
+[[redirects]]
+  from = "/admin/*"
+  status = 200
+  conditions = {Role = ["admin"]}
+
+[[redirects]]
+  from = "/admin/*"
+  to = "/login"
+  status = 401
+
 [dev]
   autoLaunch = false
