Use splat for redirect when admin

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [[redirects]]
   from = "/admin/*"
-  to = "/admin/*"
+  to = "/admin/:splat"
   status = 200
   conditions = {Role = ["admin"]}
   force = true
