Redirect to login if not authenticated

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,5 +9,11 @@
   conditions = {Role = ["admin"]}
   force = true
 
+[[redirects]]
+  from = "/admin/*"
+  to = "/login"
+  status = 401
+  force = true
+
 [dev]
   autoLaunch = false
